# owasp-zap-historic-parser

./: .mergify.yml  .pypirc  .travis.yml  README.md  owasp_zap_historic_parser.bat  pyproject.toml  requirements.txt  setup.py  tasks.py  version.py
.github/workflows/: codeql.yml  poetry_test.yaml  run-tests.yml  update-pypi.yml
docs/: README.md  owasp_zap_historic_parser.html
owasp_zap_historic_parser/: owasp_zap_historical.py  runner.py
test/: .coveragerc  db_test.py  function_test.py  runner_test.py
test/test_files/: empty.html  newReport.html  testReport.html  testReportWithSame.html
