[tool.poetry]
name = "owasp-zap-historic-parser"
version = "0.2.2"
description = "Parser to push OWASP ZAP report data to MySQL and generate delta report"
authors = ["Neil Howell <neil.howell@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Accruent/owasp-zap-historic-parser"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.1"
setuptools = "^63.4.1"
pytz = "^2022.1"
mysql-connector = "^2.2.9"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
